// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render Add button 1`] = `
<button
  className="btn btn--play movie-card__button"
  type="button"
>
  <svg
    height="19"
    viewBox="0 0 19 19"
    width="19"
  >
    <use
      xlinkHref="#add"
    />
  </svg>
  <span>
    My list
  </span>
</button>
`;

exports[`Button component should render Play button 1`] = `
<button
  className="btn btn--play movie-card__button"
  type="button"
>
  <svg
    height="19"
    viewBox="0 0 19 19"
    width="19"
  >
    <use
      xlinkHref="#play-s"
    />
  </svg>
  <span>
    Play
  </span>
</button>
`;
